<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ooo.autopo</groupId>
    <artifactId>autopo-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0.6-SNAPSHOT</version>
    <name>Autopo</name>
    <description>Automate your translations with AI and flush your Po struggles away!</description>
    <url>https://autopo.ooo</url>

    <parent>
        <groupId>com.soberlemur</groupId>
        <artifactId>soberlemur-parent</artifactId>
        <version>1.0.7</version>
    </parent>

    <licenses>
        <license>
            <name>GNU Affero General Public License</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.html</url>
            <distribution>repo</distribution>
            <comments>AGPLv3</comments>
        </license>
    </licenses>

    <organization>
        <name>Sober Lemur S.r.l.</name>
    </organization>

    <scm>
        <connection>scm:git:git@github.com:soberlemur/autopo.git</connection>
        <developerConnection>scm:git:git@github.com:soberlemur/autopo.git</developerConnection>
        <url>scm:git:git@github.com:soberlemur/autopo.git</url>
        <tag>v1.0.4</tag>
    </scm>

    <developers>
        <developer>
            <id>torakiki</id>
            <name>Andrea Vacondio</name>
            <email>andrea@soberlemur.com</email>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
        <maven.build.timestamp.format>dd-MMM-yyyy</maven.build.timestamp.format>
        <autopo.builddate>${maven.build.timestamp}</autopo.builddate>
        <assembly.format>zip</assembly.format>
        <pdfsam.version>5.3.0</pdfsam.version>
        <ikonli.version>12.4.0</ikonli.version>
        <javafx.version>26-ea+7</javafx.version>
        <jakarta-el.version>4.0.2</jakarta-el.version>
        <jakarta.inject.version>2.0.1</jakarta.inject.version>
        <testfx.version>4.0.18</testfx.version>
        <monocle.version>21</monocle.version>
        <potentilla.version>0.0.3</potentilla.version>
        <validatorfx.version>0.6.1</validatorfx.version>
        <atlantafx.version>2.1.0</atlantafx.version>
        <junit.pioneer.version>2.3.0</junit.pioneer.version>
        <langchain.version>1.3.0</langchain.version>
    </properties>

    <modules>
        <module>autopo-app</module>
        <module>autopo-i18n</module>
        <module>autopo-service</module>
        <module>autopo-model</module>
        <module>autopo-themes</module>
        <module>autopo-ai-openai</module>
        <module>autopo-ai-gemini</module>
        <module>autopo-ai-anthropic</module>
        <module>autopo-ai-ollama</module>
        <module>autopo-ai-azure-open-ai</module>
    </modules>

    <profiles>
        <profile>
            <id>toolchain</id>
            <activation>
                <jdk>(,24)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-toolchains-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>toolchain</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <toolchains>
                                <jdk>
                                    <version>24</version>
                                </jdk>
                            </toolchains>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>CI</id>
            <activation>
                <property>
                    <name>env.CI</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <excludedGroups>NoHeadless</excludedGroups>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>org.pdfsam</groupId>
                    <artifactId>javafx-monocle</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>common-release</id>
            <activation>
                <property>
                    <name>release</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <additionalOptions>
                                <additionalOption>-Xdoclint:none</additionalOption>
                                <additionalOption>--enable-preview</additionalOption>
                            </additionalOptions>
                            <release>24</release>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <configuration>
                            <tagNameFormat>v@{project.version}</tagNameFormat>
                            <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                            <autoVersionSubmodules>true</autoVersionSubmodules>
                            <preparationGoals>clean install</preparationGoals>
                            <localCheckout>true</localCheckout>
                            <goals>package</goals>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <keyFingerprintEnvName>PDFSAM_GPG_FINGERPRINT</keyFingerprintEnvName>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>24</release>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.5.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-bom</artifactId>
                <version>${ikonli.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.pdfsam</groupId>
                <artifactId>pdfsam-persistence</artifactId>
                <version>${pdfsam.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-base</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.inject</groupId>
                <artifactId>jakarta.inject-api</artifactId>
                <version>${jakarta.inject.version}</version>
            </dependency>
            <dependency>
                <groupId>com.soberlemur</groupId>
                <artifactId>potentilla</artifactId>
                <version>${potentilla.version}</version>
            </dependency>
            <dependency>
                <groupId>net.synedra</groupId>
                <artifactId>validatorfx</artifactId>
                <version>${validatorfx.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.mkpaz</groupId>
                <artifactId>atlantafx-base</artifactId>
                <version>${atlantafx.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-controls</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-bom</artifactId>
                <version>${langchain.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- test -->
            <dependency>
                <groupId>org.testfx</groupId>
                <artifactId>testfx-core</artifactId>
                <version>${testfx.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testfx</groupId>
                <artifactId>testfx-junit5</artifactId>
                <version>${testfx.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.pdfsam</groupId>
                <artifactId>javafx-monocle</artifactId>
                <version>${monocle.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-swing</artifactId>
                <version>${javafx.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.pdfsam</groupId>
                <artifactId>pdfsam-test</artifactId>
                <version>${pdfsam.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.sejda</groupId>
            <artifactId>sejda-commons</artifactId>
        </dependency>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-api</artifactId>
        </dependency>
        <!-- test depts -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>slf4j-tinylog</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-impl</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>animal-sniffer-annotations</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.tngtech.archunit</groupId>
            <artifactId>archunit-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit-pioneer</groupId>
            <artifactId>junit-pioneer</artifactId>
            <version>${junit.pioneer.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
